k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-service
  namespace: currency-service
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: currency-service
  template:
    metadata:
      labels:
        app: currency-service
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: currency-service
      containers:
      - name: currency-service
        image: z0leg/currency-service:v1
        ports:
        - containerPort: 8000

        readinessProbe:
          httpGet:
            path: /info
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /info
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
