k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: currency-service
  namespace: currency-service
spec:
  type: NodePort
  selector:
    app: currency-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
    nodePort: 30080
