k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: currency-service
spec:
  ingressClassName: nginx
  rules:
  - host: currency-service.tailaaac65.ts.net
    http:
      paths:
      - path: /info
        pathType: Prefix
        backend:
          service:
            name: currency-service
            port:
              number: 80
      - path: /info/currency
        pathType: Prefix
        backend:
          service:
            name: currency-service
            port:
              number: 80
